# my-interview-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_knowledge_base.py  0003_add_knowledge_index_metadata.py
backend/app/: main.py
backend/app/agents/: base.py  evaluator_agent.py  interviewer_agent.py  jd_analyzer_agent.py  knowledge_retriever.py  match_agent.py  question_generator_agent.py  resume_agent.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  async_task.py  interview.py  job_description.py  knowledge.py  match_report.py  mixins.py  project.py  question.py  resume.py  user.py
backend/app/repositories/: base.py  project_repository.py  resume_repository.py
backend/app/schemas/: auth.py  common.py  interview.py  job_description.py  knowledge.py  match_report.py  project.py  question.py  question_bank.py  resume.py  task.py
backend/app/services/: auth_service.py  interview_service.py  jd_service.py  knowledge_base_service.py  match_service.py  project_service.py  question_bank_service.py  question_service.py  report_service.py  resume_service.py  task_service.py
backend/pyoffer_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_evaluator_agent.py  test_interviewer_agent.py  test_jd_analyzer_agent.py  test_match_agent.py  test_question_generator_agent.py  test_resume_agent.py
(+55 files in other folders)
