[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoffer-agent-backend"
version = "0.1.0"
description = "FastAPI backend for PyOffer Agent"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt>=4.1.0",
  "celery>=5.4.0",
  "email-validator>=2.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.8.0",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

